Fix bugs causing lines to go off the bottom (#119)
* Edge distance in longestConstrained scale

* Stop footer overlapping ends of sublayouts

* No scrolling in layouts with few nodes

* Update layout tests that check for scale factor

--- a/visualizer/style.css
+++ b/visualizer/style.css
@@ -463,6 +463,7 @@ svg.bubbleprof .link-outer {
   position: absolute;
   background: var(--main-bg-color);
   top: 0;
+  margin-bottom: 65px;
 }
 
 #sublayout:after {
